# sandwich-press

./: sandwich-press.cabal
doc/: Experiment.hs
src/: Main.hs
src/Data/: Dockerfile.hs
src/Data/Dockerfile/: TypeLevel.hs
src/Docker/: Consul.hs  Redhat.hs
src/Docker/Redhat/: Cloudera.hs  Java.hs
src/Network/: Docker.hs
src/Network/Docker/: Internal.hs
