name:                sandwich-press
version:             0.1.0.0
synopsis:            Provision and run clusters of docker containers
synopsis:            Provision and run clusters of docker containers
homepage:            http://github.com/jystic/sandwich-press
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
copyright:           (c) 2015 Jacob Stanley
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable sp
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -Wall

  build-depends:
      base               >= 4.8 && < 4.9
    , aeson              >= 0.9
    , attoparsec         >= 0.13
    , bytestring         >= 0.10
    , conduit            >= 1.2
    , conduit-extra      >= 1.1
    , connection         >= 0.2
    , containers         >= 0.5
    , data-default-class >= 0.0
    , exceptions         >= 0.6
    , filepath           >= 1.4
    , http-conduit       >= 2.1
    , http-types         >= 0.8
    , monad-control      >= 1.0
    , mtl                >= 2.2
    , network-uri        >= 2.6
    , resourcet          >= 1.1
    , tar                >= 0.4
    , text               >= 1.2
    , time               >= 1.5
    , tls                >= 1.2
    , transformers       >= 0.4
    , transformers-base  >= 0.4
    , x509               >= 1.5
    , x509-store         >= 1.5
    , x509-validation    >= 1.5
